--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
             }
             div.gm4html5_div_class
             {
-              margin: 0px;
+              position: fixed;
+              top: 50%;
+              left: 50%;
+              margin-left: -512px;
+              margin-top: -384px;
               padding: 0px;
               border: 0px;
             }
@@ -79,7 +83,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/partTest.js?TYGAC=2109092721"></script>
+        <script type="text/javascript" src="html5game/partTest.js?VQVXB=2053951539"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
