--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
 
         <!-- Run the game code -->
-        <script type="text/javascript" src="html5game/partTest.js?VQVXB=2053951539"></script>
+        <script type="text/javascript" src="html5game/partTest.js?YKRYB=1980362316"></script>
         <script>window.onload = GameMaker_Init;</script>
     </body>
 </html>
